# AD_Sensitivity_Analysis

./: .gitignore  .gitlab-ci.yml  2d_map_plots_interactive.ipynb  Add_convective.py  CMakeLists.txt  Cluster_interactive.ipynb  Create median.ipynb  Create_parquet.ipynb  Create_parquet.py  Dockerfile  Example_usage.ipynb  LICENSE  Makefile  Matrix_intractive.ipynb  Plot_MSE_Time.ipynb  Plot_derivatives.ipynb  Plot_physics.ipynb  Plot_scan.ipynb  Plot_sensitivities.py  Plot_simulation.ipynb  Plot_slurm.ipynb  Plot_slurm_test.ipynb  README.md  Untitled1.ipynb  ascend_append_test.ipynb  cleanup.sh  cocnat_complete2.py  concat_dask.py  config_ens.json  config_ens_big.json  config_ens_minimal.json  convert_to_met3d.py  create_mse.py  environment.yml  execute.sh  execute_ens.sh  execute_ens_test.sh  filter_more.py  get_statistics_tables.ipynb  impact_over_rank_plot_interactive.ipynb  (+32 more)
.ipynb_checkpoints/: Add_convective-checkpoint.py  Example_usage-checkpoint.ipynb  Plot_slurm-checkpoint.ipynb  Plot_slurm_test-checkpoint.ipynb  README-checkpoint.md  ascend_append_test-checkpoint.ipynb  clean-checkpoint.job  cocnat_complete2-checkpoint.py  execute-checkpoint.sh  lab-checkpoint.py  main-checkpoint.py  mogon-checkpoint.job  mogonii-checkpoint.job  plot_job-checkpoint.py  plot_mogon-checkpoint.py  plot_small_set-checkpoint-checkpoint.ipynb  plot_small_set-checkpoint.ipynb  plot_test-checkpoint.py  plot_test2-checkpoint.py  test_reverse-checkpoint.py  window_add-checkpoint.py  window_test-checkpoint.py
ad_sensitivity_analysis/: .pylintrc
ad_sensitivity_analysis/data_handler/: create_mse.py  filter_data.py  loader.py  merge.py  transform.py
ad_sensitivity_analysis/exception/: test_exception.py
ad_sensitivity_analysis/interactive/: clustered_data.py  create_widgets.py  matrix.py  mse.py  project_map.py  rank.py  stats_histogram.py  stats_per_traj.py
ad_sensitivity_analysis/interface/: aux_interface.py  physics_example_usage.py  physics_t.py
ad_sensitivity_analysis/plot/: aux_ds_functions.py  aux_functions.py  aux_functions_mse.py  clustered_data.py  colors.py  ellipse_funcs.py  latexify.py  matrix.py  mse.py  mse_example.py  mse_histogram.py  mse_time_evolution.py  project_map.py  rank.py  simple_sim_plot.py  simulation_orig_comparison.py  stats_histogram.py  stats_histogram_aux.py  stats_per_traj_static.py
ad_sensitivity_analysis/printer/: order_top_params.py  process_description.py  rank.py  top_params.py
ad_sensitivity_analysis/statistics/: auto_correlation.py  cluster_data.py  cluster_parse_aux.py  cross_correlation.py  stats_overall.py  stats_overall_aux.py  stats_per_traj.py  top_params.py
ad_sensitivity_analysis/tests/: color_scheme.py
cmake/: toplevel.cmake
cmake/tools/: FindCoDiPack.cmake  FindNetCDF.cmake  FindPnetCDF.cmake
config/: config.json
configs/: Configurations.md  b8_config.json  b8_config_many.json  config_ens_least.json  config_ens_separate.json  config_ens_test.json  james_sens_config.json  qr_config_all.json  qr_vis_config.json  qr_vis_top40_config.json  qv_qr_lat_config.json  top40_config.json  track_config.json
configs/all/: C_mult.json  D_conv_ig.json  D_conv_sg.json  D_crit_i.json  D_crit_r.json  D_eq.json  D_rainfrz_gh.json  D_rainfrz_ig.json  K_T.json  L_ed.json  M_a.json  N_avo.json  N_sc.json  T_f.json  (+241 more)
data/: no_exclusions_conv_400_median.nc_wcb  no_exclusions_conv_400_quan25.nc_wcb  no_exclusions_conv_400_quan75.nc_wcb  no_exclusions_conv_600_quan25.nc_wcb  no_exclusions_slan_400_median.nc_wcb  no_exclusions_slan_400_quan25.nc_wcb  no_exclusions_slan_400_quan75.nc_wcb  no_exclusions_slan_600_median.nc_wcb  no_exclusions_slan_600_quan25.nc_wcb  no_exclusions_slan_600_quan75.nc_wcb
docs/: conf.py  index.rst
exe_scripts/: comparison_runs.sh  create_train_set.job  docker_test.sh  download_additional_data.sh  ens_many.job  ens_many_c400.job  ens_many_c400_q25.job  ens_many_c400_q75.job  ens_many_c600.job  ens_many_c600_q25.job  ens_many_c600_q75.job  ens_many_merge_others.job  ens_many_merge_others_ramdisk.job  ens_many_others_more_nodes.job  ens_many_s400.job  ens_many_s400_q25.job  ens_many_s400_q75.job  ens_many_s600.job  ens_many_s600_q25.job  ens_many_s600_q75.job  ensemble.job  ensemble_least.job  ensemble_runs.sh  james_ens.job  james_ens_all.job  make_script.sh  make_script_docker.sh  merge_arg.job  merge_ensembles.job  merge_many_array.job  merge_many_array_slan.job  mpi_ens.job  mpi_ensemble_execute.sh  mpi_simple_execute.sh  mpi_single_execute.sh  n_ens_many_merge_long.job  n_ens_many_merge_others.job  new_simple_execute.sh  perturbed_ensembles.sh  predict_ensembles.job  (+13 more)
scripts/: Create_parquet.py  Create_parquet_local.py  Create_processed_local.py  Deriv.py  Deriv_dask.py  Plot_sensitivities.py  README.md  Sim.py  cluster_data.py  convert_to_met3d.py  create_median.py  create_mse.py  create_parquet.sh  create_parquet_all_in_one.sh  dask_loader.py  filter_more.py  get_deriv_info.py  get_nc_info.py  get_stats.py  get_stats_per_traj.py  latexify.py  loader.py  merge.py  merge_all.py  parameters.py  physics_t.py  plot.py  plot_cosmo.py  plot_heat.py  plot_many_traj.py  plot_mapped.py  plot_mse.py  plot_outcomes.py  plot_simulation_example.py  plot_train.py  plot_trajectories.py  project_map.py  read_files.py  read_nc.py  sb_ice_wcb272280_filt_zero_30_start_over_20160922_00_traj1_all_normed.csv  (+4 more)
src/: CMakeLists.txt
src/interface/: physics_t.cpp
src/microphysics/: README.md  constants.cpp  physical_parameterizations.cpp  timing.cpp  trajectories.cpp
src/microphysics/.ipynb_checkpoints/: trajectories-checkpoint.cpp
src/misc/: general.cpp  loom.cpp  regrid.cpp  timing.cpp
src/scratch/: README.md  load_test.cpp  scan.cpp
src/scratch/.ipynb_checkpoints/: load_test-checkpoint.cpp
src/types/: CMakeLists.txt  checkpoint_t.cpp  gamma_table_t.cpp  global_args_t.cpp  input_parameters_t.cpp  model_constants_t.cpp  nc_parameters_t.cpp  netcdf_reader_t.cpp  netcdf_simulation_reader_t.cpp  output_buffer_t.cpp  output_handle_t.cpp  param_t.cpp  particle_model_constants_t.cpp  segment_t.cpp  table_t.cpp  task_scheduler_t.cpp
(+1700 files in other folders)
