[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ad_sensitivity_analysis"
version = "2.10"
description = "Scripts for loading and analyzing sensitivity simulations"
authors = [
    {name = "Maicon Hieronymus", email = "mhieronymus@uni-mainz.de"},
]
requires-python = ">=3.7"

dependencies = [
    "datashader",
    "matplotlib",
    "netCDF4",
    "pillow",
    "numpy",
    "pandas",
    "scipy",
    "scikit_learn",
    "scikit_multilearn",
    "tqdm",
    "joblib",
    "recommonmark",
    "seaborn",
    "xarray",
    "python-snappy",
    "holoviews",
    "hvplot",
]

[tool.setuptools]
packages = [
    "ad_sensitivity_analysis",
    "ad_sensitivity_analysis.data_handler",
    "ad_sensitivity_analysis.exception",
    "ad_sensitivity_analysis.interactive",
    "ad_sensitivity_analysis.interface",
    "ad_sensitivity_analysis.plot",
    "ad_sensitivity_analysis.printer",
    "ad_sensitivity_analysis.printer",
    "ad_sensitivity_analysis.statistics",
    "ad_sensitivity_analysis.tests",
    "ad_sensitivity_analysis.tests.end_to_end",
    "ad_sensitivity_analysis.tests.unit",
]
